# pyImSegm

./: .codecov.yml  .deepsource.toml  .gitattributes  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .shippable.yml  .travis.yml  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  README.md  _config.yml  circle.yml  pytest.ini  require-py27.txt  requirements-py27.txt  requirements.txt  setup.cfg  setup.py  setup_cython.py  shippable.yml  streamlit-app.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  mergify.yml
docs/: CONTRIBUTING.md  references.bib  requirements.txt
experiments_ovary_centres/: gui_annot_center_correction.py  run_center_candidate_training.py  run_center_clustering.py  run_center_evaluation.py  run_center_prediction.py  run_create_annotation.py  test_ovary_centers.sh
experiments_ovary_detect/: run_RG2Sp_estim_shape-models.py  run_annot_ellipse_match.py  run_cut_segmented_objects.py  run_egg_swap_orientation.py  run_ellipse_annot_match.py  run_ellipse_cut_scale.py  run_export_user-annot-segm.py  run_ovary_egg-segmentation.py  run_ovary_segm_evaluation.py  test_ovary_detect.sh
experiments_segmentation/: run_compute-stat_annot-segm.py  run_compute_stat_annot_segm.py  run_eval_superpixels.py  run_segm_slic_classif_graphcut.py  run_segm_slic_model_graphcut.py  sample_config.json  sample_config.yml  test_segmentations.sh
handling_annotations/: run_image_color_quantization.py  run_image_convert_label_color.py  run_overlap_images_segms.py  run_segm_annot_inpaint.py  run_segm_annot_relabel.py  (+1 more)
(+175 files in other folders)
