[metadata]
description-file = README.md
license-file = LICENSE
requirements-file = requirements.txt

#[unittest]
#plugins = nose2.plugins.doctests

[flake8]
# http://flake8.pycqa.org/en/latest/user/configuration.html
ignore = E402,E731
max-line-length = 100
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# max-complexity = 10

[tool:pytest]
addopts =
    --doctest-modules
    --color=yes
log_cli = 1
log_cli_level = CRITICAL
#log_cli_format = %(message)s
log_file = pytest.log
log_file_level = DEBUG
#log_file_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
#log_file_date_format=%Y-%m-%d %H:%M:%S
filterwarnings = ignore::FutureWarning

[pydocstyle]
convention = pep257
# D104, D107: Ignore missing docstrings in __init__ files and methods.
# D202: Ignore a blank line after docstring (collision with Python Black in decorators)
add-ignore = D104,D107,D202
max-line-length = 120
